--- a/style.css
+++ b/style.css
@@ -718,7 +718,7 @@ nav a
 
 
 
-@media screen and (max-width: 1024px)
+@media screen  and (max-width: 1024px)
 {  
       
     #Filtres
@@ -783,7 +783,7 @@ nav a
     
     .BlocHébergement1, .BlocHébergement2
     {
-        flex-direction: column;
+        flex-direction: row;
         margin-bottom: 0;
         margin-left: 20px;
     }
@@ -896,8 +896,37 @@ nav a
         background-position: center;
        border-radius: 15px 15px 0 0;
     }
+
+    .tabpopulaire
+    {
+    width: 100%;
+    display: flex;
+   
+    }
+
+    .BlocPopulaire
+    {
+    height: auto;
+    }
+
+
+    .CubePopulaire1, .CubePopulaire  
+    {
+        width: 100%;
+        flex-direction: column;
+        margin-bottom: 20px;
+        margin-right: 20px;
+        margin-left: 20px;
+    }
+  
+    .ImgPopulaire1, .ImgPopulaire2, .ImgPopulaire3
+    {
+
+        width: 100%;
+        height: 180px;
+        border-radius: 15px 15px 0 0;
+    }
 }
-    
 
   
 
@@ -914,26 +943,27 @@ nav a
   {
     width: 100%;
     height: auto;
-   
   }
-
-  /*.bloc_activites
-  {      
-     flex-direction: column;
-     height: auto;
-  }*/
-
+    
   .cubeactivites
   {
-      width: 100%;
-      margin-bottom: 50px;
-      margin-left: 20px;
-      margin-right: 20px;
+    width: 50%;
+    margin-bottom: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
   .cubeactivites2356
   {
-      margin-bottom: 50px;
-      height: auto;
+    margin-bottom: 50px;
+    height: auto;
+    width: 90%;
+    
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px 1px #f2f2f2;
+    position: relative;
+    margin-left: 10px;
+    margin-right: 25px;
+
   }
 
   .bloc_activites1
@@ -941,8 +971,8 @@ nav a
       width: 100%;
       height: auto;
       margin-right: 20px;
-      margin-left: 20px;
-      flex-direction: column;
+     
+      flex-direction: row;
   }
 
   .bloc_activites2
@@ -951,24 +981,17 @@ nav a
       height: auto;
       margin-right: 20px;
       margin-left: 20px;
-      flex-direction: column;
+      flex-direction: row;
 
   }
 
   .imgactivite1, .imgactivite2, .imgactivite3, .imgactivite4, .imgactivite5, .imgactivite6
   {
       height: 200px;
+      width: 100%;
   }
 
-  .tab1, .tab2
-  {
-    width: 100%;
-    height: auto;
-    display: flex;
-    margin-top: 50px;
-    flex-direction: column;
-  }
-
+ 
 
 
 
@@ -991,7 +1014,7 @@ nav a
 }
     
 
-@media screen and (max-width: 615px)
+@media screen and (max-width: 700px)
 {
     .LiensHébergementActivité
     {
@@ -1016,7 +1039,7 @@ nav a
        
     }
 
-    .LienNavActivités:hover, .LienNavHébergement:hover, .LienNavSinscrire:hover
+    .LienNavActivités:hover, .LienNavHébergement:hover
     {
         border-top: none;
         border-bottom: 5px solid #0065fc;
@@ -1055,6 +1078,38 @@ nav a
     .BlocHébergement
     {
         background-color: white;
+    }
+
+    .BlocHébergement1, .BlocHébergement2
+    {
+        flex-direction: column;
+    }
+    .CubeHébergement
+    {
+        width: 90%;
+    }
+    .tabpopulaire
+    {
+        width: 100%;
+        flex-direction: column;
+    }
+    .CubePopulaire, .CubePopulaire1
+    {
+        width: 90%;
+    }
+
+    .tab1, .tab2
+    {
+        flex-direction: column;
+    }
+    .bloc_activites1, .bloc_activites2
+    {
+       flex-direction: column;
+    }
+
+    .cubeactivites
+    {
+        width: 90%;
     }
     .ResponsiveMobile
     {
