--- a/style.css
+++ b/style.css
@@ -518,6 +518,7 @@ nav a
     width: 100%;
     height: auto;
     display: flex;
+    margin-right: 20px;
    
 }
 
@@ -622,9 +623,9 @@ nav a
     width: 95%;
 
 }
-.bloc_activites1
+.bloc_activites1, .bloc_activites2
 {
-    width: 46%;
+    width: 50%;
     height:600px;
     display: flex;
     flex-direction: column;
@@ -645,16 +646,7 @@ nav a
     box-shadow: 5px 5px 5px 1px #f2f2f2;
 }
 
-.bloc_activites2
-{
-    width: 46%;
-    height: 600px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: 20px;
 
-}
 .Footer
 {
     background-color: #F2F2F2;
@@ -1116,6 +1108,10 @@ nav a
     {
         flex-direction: column;
     }
+    .tab1
+    {
+        padding-left: 20px;
+    }
 
    
     .bloc_activites1, .bloc_activites2
@@ -1124,11 +1120,11 @@ nav a
     }
     .bloc_activites1
     {
-        padding-left: 5px;
+        padding-left: 20px;
     }
     .bloc_activites2
     {
-        padding-right: 5px;
+        padding-right: 20px;
     }
 
     .bloc_activites
@@ -1140,12 +1136,14 @@ nav a
     {
         width: 90%;
         height: auto;
+        padding-left: 20px;
     }
     .ResponsiveMobile
     {
         padding-left: 5px;
     }
     
+  
    
    
 }
