--- a/style.css
+++ b/style.css
@@ -1130,6 +1130,7 @@ nav a
     .bloc_activites
     {
         width: 100%;
+        margin-left: 0;
     }
 
     .cubeactivites
@@ -1138,11 +1139,14 @@ nav a
         height: auto;
         padding-left: 20px;
     }
+
+   
     .ResponsiveMobile
     {
         padding-left: 5px;
     }
     
+   
   
    
    
