--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body
 {
     font-family: 'Raleway', sans-serif;
-  margin: auto;
+  margin: 0;
+  padding: 0;
 }
-
 
 
 /* Logo et barre de navigation */
@@ -283,6 +283,7 @@ nav a
 .BlocHébergement
 {
     width: 60%;
+    margin-bottom: 30px;
     
     background-color: #F2F2F2;
     margin-right: 20px;
@@ -938,7 +939,7 @@ nav a
     {
         width: 100%;
         height: auto;
-        margin: auto;
+       /* margin: auto;*/
     }
     
   .cubeactivites
@@ -1022,8 +1023,6 @@ nav a
         margin-left: 0;
     }
 
-
-
     .LiensMenuNav
     {
         width: 100%;
@@ -1087,9 +1086,9 @@ nav a
     .BlocHébergement
     {
         background-color: white;
-        margin: auto;
+       
     }
-
+   
     .titreHébergement
     {
         padding-left: 40px;
@@ -1099,15 +1098,17 @@ nav a
     {
         flex-direction: column;
     }
+
+    .ImgHébergement1, .ImgHébergement2, .ImgHébergement3, .ImgHébergement4, .ImgHébergement5, .ImgHébergement6
+    {
+        width: 100%;
+        height: 160px;
+    }
     .CubeHébergement
     {
         width: 90%;
     }
 
-    .BlocPopulaire
-    {
-        margin: auto;
-    }
     .tabpopulaire
     {
         width: 100%;
@@ -1116,12 +1117,19 @@ nav a
     .CubePopulaire, .CubePopulaire1
     {
         width: 90%;
+        flex-direction: row;
+    }
+
+    .ImgPopulaire1, .ImgPopulaire2, .ImgPopulaire3
+    {
+        width: 100%;
+        height: 160px;
+        border-radius: 15px 0 0 15px;
     }
 
     .CubeDétailPopulaire
     {
-        padding-right: 20px;
-        margin-right: auto;
+        width: 100%;
     }
 
      .tab2
@@ -1186,9 +1194,16 @@ nav a
         padding-left: 5px;
     }
     
+
    
   
-   
+   .center
+   {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+   }
    
 }
 
