--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body
 {
     font-family: 'Raleway', sans-serif;
-  margin: 0;
+  margin: auto;
   padding: 0;
 }
 
@@ -1103,6 +1103,7 @@ nav a
     .BlocHébergement
     {
         background-color: white;
+        margin-right: 0;
        
     }
    
@@ -1157,8 +1158,9 @@ nav a
     }
     .tab1
     {
-        padding-left: 20px;
+        
         flex-direction: column;
+        margin-right: 0;
     }
 
     .activites
@@ -1172,6 +1174,11 @@ nav a
        flex-direction: column;
     }
 
+    .bloc_activites1
+    {
+        margin-right: 0;
+    }
+
     
     .imgactivite1, .imgactivite2, .imgactivite3, .imgactivite4, .imgactivite5, .imgactivite6
     {
@@ -1179,17 +1186,14 @@ nav a
       width: 100%;
     }
 
-    .TitreBlocActivite
-    {
-        padding-left: 40px;
-    }
-
+    
    
 
     .bloc_activites2
     {
-        padding-right: 20px;
+        
         margin-left: 0;
+        margin-right: 0;
     }
 
     .bloc_activites
