--- a/style.css
+++ b/style.css
@@ -1121,6 +1121,10 @@ nav a
         margin-right: 0;
        
     }
+    .BlocPopulaire
+    {
+        margin: auto;
+    }
    
     .titreHébergement
     {
