--- a/style.css
+++ b/style.css
@@ -1174,6 +1174,7 @@ nav a
         flex-direction: column;
         margin-top: 0;
         padding-left: 20px;
+        margin-right: 0;
     }
     .tab1
     {
