--- a/style.css
+++ b/style.css
@@ -1123,7 +1123,9 @@ nav a
     }
     .BlocPopulaire
     {
-        margin: auto;
+       display: flex;
+       flex-direction: column;
+       align-items: center;
     }
    
     .titreHébergement
@@ -1134,6 +1136,7 @@ nav a
     .BlocHébergement1, .BlocHébergement2
     {
         flex-direction: column;
+        align-items: center;
     }
 
     .ImgHébergement1, .ImgHébergement2, .ImgHébergement3, .ImgHébergement4, .ImgHébergement5, .ImgHébergement6
@@ -1143,7 +1146,7 @@ nav a
     }
     .CubeHébergement
     {
-        width: 90%;
+        width: 95%;
     }
 
     .tabpopulaire
@@ -1172,14 +1175,15 @@ nav a
      .tab2
     {
         flex-direction: column;
+        align-items: center;
         margin-top: 0;
-        padding-left: 20px;
         margin-right: 0;
     }
     .tab1
     {
         
         flex-direction: column;
+        align-items: center;
         margin-right: 0;
     }
 
@@ -1187,16 +1191,19 @@ nav a
     {
         width: 95%;
         padding: 5%;
+       
     }
    
     .bloc_activites1, .bloc_activites2
     {
        flex-direction: column;
+       align-items: center;
     }
 
     .bloc_activites1
     {
         margin-right: 0;
+        
     }
 
     
