Modification du fichier css

--- a/style.css
+++ b/style.css
@@ -1104,7 +1104,9 @@ nav a
 
     .Filtres
     {
-      padding-left: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
         margin-bottom: 0;
     }
 
@@ -1248,7 +1250,10 @@ nav a
    
     .ResponsiveMobile
     {
-        padding-left: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
     }
     
 
