--- a/style.css
+++ b/style.css
@@ -1108,6 +1108,8 @@ nav a
         flex-direction: column;
         align-items: flex-start;
         margin-bottom: 0;
+        margin-bottom: 0;
+        margin-top: 20px;
     }
 
     .Info
@@ -1121,6 +1123,7 @@ nav a
     {
         background-color: white;
         margin-right: 0;
+        margin-top: 20px;
        
     }
     .BlocPopulaire
@@ -1132,7 +1135,7 @@ nav a
    
     .titreHébergement
     {
-        padding-left: 40px;
+        padding-left: 20px;
     }
 
     .BlocHébergement1, .BlocHébergement2
