--- a/style.css
+++ b/style.css
@@ -1152,6 +1152,7 @@ nav a
     .BlocPopulaire
     {
        display: flex;
+       width: 100%;
        flex-direction: column;
        align-items: center;
        margin: 0 20px;
