--- a/style.css
+++ b/style.css
@@ -406,6 +406,7 @@ nav a
 {
     font-weight: bold;
     margin-left: 40px;
+    width: 100%;
    
 }
 
@@ -1054,7 +1055,7 @@ nav a
 
     .LiensMenuNav
     {
-        width: 90%;
+        width: 100%;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -1077,7 +1078,7 @@ nav a
 
     .BarreRecherche
     {   
-        width: 200px;
+        width: 100%;
         border-top: 1px solid #f2f2f2;
         border-bottom: 1px solid #f2f2f2;
         border: none;
@@ -1143,7 +1144,8 @@ nav a
     {
         background-color: white;
         margin-right: 0;
-        margin-top: 20px;
+        margin-top: 0;
+        align-items: center;
         width: 100%;
        
     }
@@ -1153,12 +1155,20 @@ nav a
        width: 100%;
        flex-direction: column;
        align-items: center;
-       margin: 0 20px;
+       margin: 0 10px;
+       padding: 30px;
+       margin-left: 20px;
+    }
+
+    .TitreBlocPopulaire
+    {
+        width: 100%;
     }
    
     .titreHébergement
     {
-        padding-left: 20px;
+        padding-left: 0;
+        width: 100%;
     }
 
     .BlocHébergement1, .BlocHébergement2
@@ -1185,7 +1195,7 @@ nav a
     }
     .CubePopulaire, .CubePopulaire1
     {
-        width: 90%;
+        width: 100%;
         flex-direction: row;
     }
 
@@ -1219,6 +1229,7 @@ nav a
     .activites
     {
         width: 100%;
+        margin: 0;
         
        
     }
@@ -1262,9 +1273,13 @@ nav a
 
     .cubeactivites
     {
-        width: 90%;
-        height: auto;
-       
+        width: 100%;
+        height: auto;   
+    }
+
+    .cubeactivites2356
+    {
+        width: 100%;
     }
 
    
@@ -1274,6 +1289,7 @@ nav a
     {
         width: 100%;
         padding: 20px;
+        margin-top: 0;
     }
    
     .ResponsiveMobile
