Modification du fichier css

--- a/style.css
+++ b/style.css
@@ -1076,6 +1076,11 @@ nav a
     
     }
 
+    .LienNavSinscrire
+    {
+        padding-left: 95px
+    }
+
     .BarreRecherche
     {   
         width: 100%;
