--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body {
   font-weight: bold;
   color: #0065fc;
   background-color: white;
+  font-family: "Raleway";
 }
 
 .ColorLien1 {
@@ -256,63 +257,15 @@ nav a {
   padding-left: 10px;
 }
 
-.BlocHébergement1 {
+.BlocHébergement1_2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 30px;
 }
 
-.BlocHébergement2 {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 30px;
-}
-
-.ImgHébergement1 {
-  background: url("./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg")
-    center/cover;
-  width: 100%;
-  height: 100px;
-  border-radius: 15px 15px 0 0;
-}
-
-.ImgHébergement2 {
-  background: url("./hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg")
-    center/cover;
-  width: 100%;
-  height: 100px;
-  border-radius: 15px 15px 0 0;
-}
-
-.ImgHébergement3 {
-  background: url("./hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg")
-    center/cover;
-  width: 100%;
-  height: 100px;
-  border-radius: 15px 15px 0 0;
-}
-
-.ImgHébergement4 {
-  background: url("./hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg")
-    center/cover;
-  width: 100%;
-  height: 100px;
-  border-radius: 15px 15px 0 0;
-}
-
-.ImgHébergement5 {
-  background: url("./hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg")
-    center/cover;
-  width: 100%;
-  height: 100px;
-  border-radius: 15px 15px 0 0;
-}
-
-.ImgHébergement6 {
-  background: url("./hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg")
-    center/cover;
+.ImgHébergement {
+  object-fit: cover;
   width: 100%;
   height: 100px;
   border-radius: 15px 15px 0 0;
@@ -363,25 +316,22 @@ nav a {
   width: 90%;
 }
 
-.ImgPopulaire1 {
-  background: url("./hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg")
-    center/cover;
+.ImgPopulaire {
+  object-fit: cover;
   width: 35%;
   height: 145px;
   border-radius: 15px 0 0 15px;
 }
 
-.ImgPopulaire2 {
-  background: url("./hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg")
-    center/cover;
+.ImgPopulaire {
+  object-fit: cover;
   width: 35%;
   height: 145px;
   border-radius: 15px 0 0 15px;
 }
 
-.ImgPopulaire3 {
-  background: url("./hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg")
-    center/cover;
+.ImgPopulaire {
+  object-fit: cover;
   width: 35%;
   height: 145px;
   border-radius: 15px 0 0 15px;
@@ -466,53 +416,24 @@ nav a {
   margin-left: 20px;
 }
 
-.imgactivite1 {
-  background-image: url("./activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg");
+.imgactivite {
   width: 100%;
   height: 530px;
-  background-size: cover;
-  background-position: center;
+  object-fit: cover;
   border-radius: 15px 15px 0 0;
 }
 
 .imgactivite2 {
-  background-image: url("./activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg");
   width: 100%;
   height: 250px;
-  background-size: cover;
-  background-position: center;
+  object-fit: cover;
   border-radius: 15px 15px 0 0;
 }
+
 .imgactivite3 {
-  background-image: url("./activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg");
   width: 100%;
   height: 150px;
-  background-size: cover;
-  background-position: center;
-  border-radius: 15px 15px 0 0;
-}
-.imgactivite4 {
-  background-image: url("./activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg");
-  width: 100%;
-  height: 530px;
-  background-size: cover;
-  background-position: center;
-  border-radius: 15px 15px 0 0;
-}
-.imgactivite5 {
-  background-image: url("./activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg");
-  width: 100%;
-  height: 200px;
-  background-size: cover;
-  background-position: center;
-  border-radius: 15px 15px 0 0;
-}
-.imgactivite6 {
-  background-image: url("./activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg");
-  width: 100%;
-  height: 200px;
-  background-size: cover;
-  background-position: center;
+  object-fit: cover;
   border-radius: 15px 15px 0 0;
 }
 
@@ -526,7 +447,9 @@ nav a {
   align-items: center;
 }
 
-.cubeactivites:hover {
+.cubeactivites:hover,
+.imgactivite2:hover,
+.imgactivite3:hover {
   cursor: pointer;
   transform: scale(1.1);
 }
@@ -539,22 +462,13 @@ nav a {
   padding-left: 5%;
   width: 95%;
 }
-.bloc_activites1,
-.bloc_activites2 {
+.bloc_activites1_2 {
   width: 50%;
   height: 600px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding-left: 20px;
-}
-
-.imgactivite2:hover,
-.imgactivite3:hover,
-.imgactivite5:hover,
-.imgactivite6:hover {
-  cursor: pointer;
-  transform: scale(1.1);
 }
 
 .cubeactivites2356 {
@@ -655,8 +569,7 @@ nav a {
     align-items: stretch;
   }
 
-  .BlocHébergement1,
-  .BlocHébergement2 {
+  .BlocHébergement1_2 {
     flex-direction: row;
     width: 100%;
     margin-bottom: 0;
@@ -673,12 +586,7 @@ nav a {
     height: auto;
   }
 
-  .ImgHébergement1,
-  .ImgHébergement2,
-  .ImgHébergement3,
-  .ImgHébergement4,
-  .ImgHébergement5,
-  .ImgHébergement6 {
+  .ImgHébergement {
     width: 100%;
     height: 180px;
   }
@@ -724,7 +632,7 @@ nav a {
     width: 95%;
   }
 
-  .bloc_activites1 {
+  .bloc_activites1_2 {
     width: 100%;
     height: auto;
     display: flex;
@@ -748,23 +656,12 @@ nav a {
     margin-top: 50px;
   }
 
-  .bloc_activites2 {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-  }
-
-  .imgactivite1,
+  .imgactivite,
   .imgactivite2,
-  .imgactivite3,
-  .imgactivite4,
-  .imgactivite5,
-  .imgactivite6 {
+  .imgactivite3 {
     width: 100%;
     height: 250px;
-    background-size: cover;
-    background-position: center;
+    object-fit: cover;
     border-radius: 15px 15px 0 0;
   }
 
@@ -789,9 +686,7 @@ nav a {
     margin-left: 20px;
   }
 
-  .ImgPopulaire1,
-  .ImgPopulaire2,
-  .ImgPopulaire3 {
+  .ImgPopulaire {
     width: 100%;
     height: 180px;
     border-radius: 15px 15px 0 0;
@@ -823,7 +718,7 @@ nav a {
     margin-right: 25px;
   }
 
-  .bloc_activites1 {
+  .bloc_activites1_2 {
     width: 100%;
     height: auto;
     margin-right: 20px;
@@ -831,20 +726,9 @@ nav a {
     flex-direction: row;
   }
 
-  .bloc_activites2 {
-    width: 100%;
-    height: auto;
-    margin-right: 20px;
-    margin-left: 20px;
-    flex-direction: row;
-  }
-
-  .imgactivite1,
+  .imgactivite,
   .imgactivite2,
-  .imgactivite3,
-  .imgactivite4,
-  .imgactivite5,
-  .imgactivite6 {
+  .imgactivite3 {
     height: 200px;
     width: 100%;
   }
@@ -977,23 +861,21 @@ nav a {
     width: 100%;
   }
 
-  .BlocHébergement1,
-  .BlocHébergement2 {
+  .BlocHébergement1_2 {
     flex-direction: column;
     align-items: center;
   }
 
-  .ImgHébergement1,
-  .ImgHébergement2,
-  .ImgHébergement3,
-  .ImgHébergement4,
-  .ImgHébergement5,
-  .ImgHébergement6 {
+  .ImgHébergement {
     width: 100%;
     height: 160px;
   }
   .CubeHébergement {
     width: 100%;
+  }
+
+  .CubeDétailHébergement {
+    height: auto;
   }
 
   .tabpopulaire {
@@ -1003,19 +885,19 @@ nav a {
   .CubePopulaire,
   .CubePopulaire1 {
     width: 100%;
-    flex-direction: row;
+    flex-direction: column;
+    height: auto;
   }
 
-  .ImgPopulaire1,
-  .ImgPopulaire2,
-  .ImgPopulaire3 {
+  .ImgPopulaire {
     width: 100%;
     height: 160px;
-    border-radius: 15px 0 0 15px;
+    border-radius: 15px 15px 0 0;
   }
 
   .CubeDétailPopulaire {
     width: 100%;
+    height: auto;
   }
 
   .tab2 {
@@ -1033,31 +915,24 @@ nav a {
   .activites {
     width: 100%;
     margin: 0;
+    padding: 20px;
   }
 
-  .bloc_activites1,
-  .bloc_activites2 {
+  .bloc_activites1_2 {
     flex-direction: column;
     align-items: center;
   }
 
-  .bloc_activites1 {
+  .bloc_activites1_2 {
     margin-right: 0;
+    margin-left: 0;
   }
 
-  .imgactivite1,
+  .imgactivite,
   .imgactivite2,
-  .imgactivite3,
-  .imgactivite4,
-  .imgactivite5,
-  .imgactivite6 {
+  .imgactivite3 {
     height: 160px;
     width: 100%;
-  }
-
-  .bloc_activites2 {
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .bloc_activites {
